fix(main): fix figures spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,5 +38,5 @@ main section h2{
 }
 
 main section .row div img{
-    width: 400px;
+    width: 100%;
 }
